--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-welcome to visisht's website <br>
-i am student in mvsr
+<h1> visisht </h1>
+<h2> visisht </h2>
+<h3> visisht </h3>
+<h4> visisht </h4>
+<h5> visisht </h5>
+<h6> visisht </h6>
+<h7> visisht </h7>
+<p>welcome to visisht's website </p>
+<p>i am student in mvsr</p>
